# HealthDB

./: .env.example  .gitignore  .replit  App.js  DEPENDENCY_AUDIT_REPORT.md  Dockerfile  Procfile  alembic.ini  aleo_interface.py  auth.py  database.py  database.tf  docker-compose.yml  iam.tf  kms.tf  main.py  main.tf  nginx.conf  package-lock.json  package.json  pyproject.toml  railway.json  render.yaml  replit.nix  requirements.txt  security.tf  storage.tf  tailwind.config.js  utils.py  variables.tf  vercel.json  zpass_interface.py
.streamlit/: config.toml
accounts/: decorators.py  middleware.py  models.py
alembic/: env.py
api/: __init__.py  database.py  deidentification.py  fhir_ingest.py  main.py  models.py  repositories.py  seed.py
attached_assets/: CAR-T Cytokine Profile Study 2.19.25.docx  Pasted--IRB-Protocol-Template--1741053945902.txt
components/: Dashboard.js  DataOverview.js  __init__.py  insights_sidebar.py  navigation.py  validation_tracker.py
config/: security.py
contracts/: research_data.aleo
data/: healthdb.db
data_collection/: deidentification.py  models.py
docs/: ARCHITECTURE.md  IMPROVEMENTS_SUMMARY.md  SEARCH_ENGINE_SETUP.md  STATE_MACHINES.md
emr_connectors/: __init__.py  base.py  epic.py
irb_portal/: models.py  workflows.py
monetization/: __init__.py  models.py  pricing_engine.py
oncology/: __init__.py  models.py
pages/: 10_Literature_Review_Assistant.py  11_RESEARCH_TRENDS.py  11_Research_Trends.py  12_NOTIFICATION_CENTER.py  12_Notification_Center.py  1_Data_Upload.py  2_Cohort_Builder.py  2_VISUALIZATIONS.py  2_Visualizations.py  3_PROJECT_MANAGEMENT.py  3_Project_Management.py  4_Data_Export.py  5_ZKP_DEMO.py  (+12 more)
(+45 files in other folders)
