[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "face-recognition>=1.3.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "plotly>=5.24.1",
    "psycopg2-binary>=2.9.10",
    "pybtex>=0.24.0",
    "requests-html>=0.10.0",
    "requests>=2.32.3",
    "scholarly>=1.7.11",
    "streamlit>=1.41.1",
    "webauthn>=2.4.0",
    "twilio>=9.4.1",
]
