[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "face-recognition>=1.3.0",
    "numpy<2.0.0",
    "pandas<2.0.0",
    "pillow>=11.1.0",
    "plotly>=5.24.1",
    "psycopg2-binary>=2.9.10",
    "pybtex>=0.24.0",
    "requests-html>=0.10.0",
    "requests>=2.32.3",
    "scholarly>=1.7.11",
    "streamlit>=1.41.1",
    "webauthn>=2.4.0",
    "twilio>=9.4.1",
    "openai>=1.59.5",
    "pytesseract>=0.3.13",
    "pdf2image>=1.17.0",
    "python-docx>=1.1.2",
    "spacy>=3.8.4",
    "nltk>=3.9.1",
    "chunkr>=0.3.1",
    "pyarrow<12.0.0",
]
